tests/solidity-semantic-tests/out/errors/error_throw_from_module_via_member_access/CContract.clear.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_pwiy3q5c/C.sol.CContract.clear_state_program() -> uint64:
main:
    pushint 1
    return
